
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "xgboost>=2.0.0",
    "yfinance>=0.2.28",
]
