
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.3",
    "tensorflow==2.12.0",
    "matplotlib==3.7.1",
    "scikit-learn==1.2.2",
    "xgboost==1.7.3",
    "yfinance==0.2.28",
    "ta==0.10.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
]
